@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1999, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1999, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -56,6 +56,7 @@ import java.util.TreeSet;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
+import javax.lang.model.AnnotatedConstruct;
 import javax.lang.model.SourceVersion;
 import javax.lang.model.element.AnnotationMirror;
 import javax.lang.model.element.AnnotationValue;
@@ -82,8 +83,9 @@ import javax.lang.model.type.WildcardType;
 import javax.lang.model.util.ElementFilter;
 import javax.lang.model.util.ElementKindVisitor14;
 import javax.lang.model.util.Elements;
+import javax.lang.model.util.SimpleAnnotationValueVisitor14;
 import javax.lang.model.util.SimpleElementVisitor14;
-import javax.lang.model.util.SimpleTypeVisitor9;
+import javax.lang.model.util.SimpleTypeVisitor14;
 import javax.lang.model.util.TypeKindVisitor9;
 import javax.lang.model.util.Types;
 import javax.tools.FileObject;
@@ -91,14 +93,24 @@ import javax.tools.JavaFileManager;
 import javax.tools.JavaFileManager.Location;
 import javax.tools.StandardLocation;
 
+import com.sun.source.doctree.BlockTagTree;
+import com.sun.source.doctree.DeprecatedTree;
 import com.sun.source.doctree.DocCommentTree;
 import com.sun.source.doctree.DocTree;
 import com.sun.source.doctree.DocTree.Kind;
 import com.sun.source.doctree.EndElementTree;
 import com.sun.source.doctree.ParamTree;
+import com.sun.source.doctree.ProvidesTree;
+import com.sun.source.doctree.ReturnTree;
+import com.sun.source.doctree.SeeTree;
+import com.sun.source.doctree.SerialDataTree;
+import com.sun.source.doctree.SerialFieldTree;
+import com.sun.source.doctree.SerialTree;
 import com.sun.source.doctree.StartElementTree;
 import com.sun.source.doctree.TextTree;
+import com.sun.source.doctree.ThrowsTree;
 import com.sun.source.doctree.UnknownBlockTagTree;
+import com.sun.source.doctree.UsesTree;
 import com.sun.source.tree.CompilationUnitTree;
 import com.sun.source.tree.LineMap;
 import com.sun.source.util.DocSourcePositions;
@@ -107,9 +119,9 @@ import com.sun.source.util.TreePath;
 import com.sun.tools.javac.model.JavacTypes;
 import jdk.javadoc.internal.doclets.toolkit.BaseConfiguration;
 import jdk.javadoc.internal.doclets.toolkit.BaseOptions;
+import jdk.javadoc.internal.doclets.toolkit.CommentUtils;
 import jdk.javadoc.internal.doclets.toolkit.CommentUtils.DocCommentInfo;
 import jdk.javadoc.internal.doclets.toolkit.Resources;
-import jdk.javadoc.internal.doclets.toolkit.WorkArounds;
 import jdk.javadoc.internal.doclets.toolkit.taglets.BaseTaglet;
 import jdk.javadoc.internal.doclets.toolkit.taglets.Taglet;
 import jdk.javadoc.internal.tool.DocEnvImpl;
@@ -222,14 +234,15 @@ public class Utils {
     /**
      * Search for the given method in the given class.
      *
-     * @param  te        Class to search into.
-     * @param  method    Method to be searched.
-     * @return ExecutableElement Method found, null otherwise.
+     * @param te     Class to search into.
+     * @param method Method to be searched.
+     *
+     * @return Method found, null otherwise.
      */
     public ExecutableElement findMethod(TypeElement te, ExecutableElement method) {
-        for (Element m : getMethods(te)) {
-            if (executableMembersEqual(method, (ExecutableElement) m)) {
-                return (ExecutableElement) m;
+        for (ExecutableElement m : getMethods(te)) {
+            if (executableMembersEqual(method, m)) {
+                return m;
             }
         }
         return null;
@@ -282,8 +295,7 @@ public class Utils {
     }
 
     /**
-     * According to
-     * <cite>The Java Language Specification</cite>,
+     * According to <cite>The Java Language Specification</cite>,
      * all the outer classes and static inner classes are core classes.
      */
     public boolean isCoreClass(TypeElement e) {
@@ -322,7 +334,6 @@ public class Utils {
         return !e.getAnnotationMirrors().isEmpty();
     }
 
-    @SuppressWarnings("preview")
     public boolean isAnnotationType(Element e) {
         return new SimpleElementVisitor14<Boolean, Void>() {
             @Override
@@ -392,6 +403,10 @@ public class Utils {
         return e.getModifiers().contains(Modifier.DEFAULT);
     }
 
+    public boolean isFinal(Element e) {
+        return e.getModifiers().contains(Modifier.FINAL);
+    }
+
     public boolean isPackagePrivate(Element e) {
         return !(isPublic(e) || isPrivate(e) || isProtected(e));
     }
@@ -438,12 +453,10 @@ public class Utils {
         return typeUtils.isSubtype(e.asType(), getExternalizableType());
     }
 
-    @SuppressWarnings("preview")
     public boolean isRecord(TypeElement e) {
         return e.getKind() == ElementKind.RECORD;
     }
 
-    @SuppressWarnings("preview")
     public boolean isCanonicalRecordConstructor(ExecutableElement ee) {
         TypeElement te = (TypeElement) ee.getEnclosingElement();
         List<? extends RecordComponentElement> stateComps = te.getRecordComponents();
@@ -478,7 +491,6 @@ public class Utils {
         return configuration.workArounds.definesSerializableFields( aclass);
     }
 
-    @SuppressWarnings("preview")
     public String modifiersToString(Element e, boolean trailingSpace) {
         SortedSet<Modifier> modifiers = new TreeSet<>(e.getModifiers());
         modifiers.remove(NATIVE);
@@ -562,7 +574,6 @@ public class Utils {
             }
 
             @Override
-            @SuppressWarnings("preview")
             public String visitTypeAsClass(TypeElement e, SortedSet<Modifier> mods) {
                 addModifiers(mods);
                 String keyword = e.getKind() == ElementKind.RECORD ? "record" : "class";
@@ -589,7 +600,7 @@ public class Utils {
     }
 
     public boolean isOrdinaryClass(TypeElement te) {
-        if (isEnum(te) || isInterface(te) || isAnnotationType(te)) {
+        if (isEnum(te) || isInterface(te) || isAnnotationType(te) || isRecord(te)) {
             return false;
         }
         if (isError(te) || isException(te)) {
@@ -599,7 +610,8 @@ public class Utils {
     }
 
     public boolean isUndocumentedEnclosure(TypeElement enclosingTypeElement) {
-        return (isPackagePrivate(enclosingTypeElement) || isPrivate(enclosingTypeElement))
+        return (isPackagePrivate(enclosingTypeElement) || isPrivate(enclosingTypeElement)
+                    || hasHiddenTag(enclosingTypeElement))
                 && !isLinkable(enclosingTypeElement);
     }
 
@@ -618,7 +630,7 @@ public class Utils {
     }
 
     public boolean isPrimitive(TypeMirror t) {
-        return new SimpleTypeVisitor9<Boolean, Void>() {
+        return new SimpleTypeVisitor14<Boolean, Void>() {
 
             @Override
             public Boolean visitNoType(NoType t, Void p) {
@@ -692,7 +704,7 @@ public class Utils {
      *
      * @param e the executable element
      * @param site the contextual site
-     * @return String signature with simple (unqualified) parameter types
+     * @return signature with simple (unqualified) parameter types
      */
     public String flatSignature(ExecutableElement e, TypeElement site) {
         return makeSignature(e, site, false);
@@ -723,7 +735,7 @@ public class Utils {
     }
 
     public String getTypeSignature(TypeMirror t, boolean qualifiedName, boolean noTypeParameters) {
-        return new SimpleTypeVisitor9<StringBuilder, Void>() {
+        return new SimpleTypeVisitor14<StringBuilder, Void>() {
             final StringBuilder sb = new StringBuilder();
 
             @Override
@@ -756,14 +768,20 @@ public class Utils {
             }
 
             @Override
-            public StringBuilder visitTypeVariable(javax.lang.model.type.TypeVariable t, Void p) {
+            public StringBuilder visitPrimitive(PrimitiveType t, Void p) {
+                sb.append(t.getKind().toString().toLowerCase(Locale.ROOT));
+                return sb;
+            }
+
+            @Override
+            public StringBuilder visitTypeVariable(TypeVariable t, Void p) {
                 Element e = t.asElement();
                 sb.append(qualifiedName ? getFullyQualifiedName(e, false) : getSimpleName(e));
                 return sb;
             }
 
             @Override
-            public StringBuilder visitWildcard(javax.lang.model.type.WildcardType t, Void p) {
+            public StringBuilder visitWildcard(WildcardType t, Void p) {
                 sb.append("?");
                 TypeMirror upperBound = t.getExtendsBound();
                 if (upperBound != null) {
@@ -946,8 +964,8 @@ public class Utils {
         return set;
     }
 
-    public List<? extends DocTree> getSerialDataTrees(ExecutableElement member) {
-        return getBlockTags(member, SERIAL_DATA);
+    public List<? extends SerialDataTree> getSerialDataTrees(ExecutableElement member) {
+        return getBlockTags(member, SERIAL_DATA, SerialDataTree.class);
     }
 
     public FileObject getFileObject(TypeElement te) {
@@ -1104,20 +1122,6 @@ public class Utils {
     }
 
     /**
-     * Given a string, replace all occurrences of 'newStr' with 'oldStr'.
-     * @param originalStr the string to modify.
-     * @param oldStr the string to replace.
-     * @param newStr the string to insert in place of the old string.
-     */
-    public String replaceText(String originalStr, String oldStr,
-            String newStr) {
-        if (oldStr == null || newStr == null || oldStr.equals(newStr)) {
-            return originalStr;
-        }
-        return originalStr.replace(oldStr, newStr);
-    }
-
-    /**
      * Given an annotation, return true if it should be documented and false
      * otherwise.
      *
@@ -1147,10 +1151,11 @@ public class Utils {
      */
     public boolean isLinkable(TypeElement typeElem) {
         return
-            (typeElem != null &&
-                (isIncluded(typeElem) && configuration.isGeneratedDoc(typeElem))) ||
+            typeElem != null &&
+            ((isIncluded(typeElem) && configuration.isGeneratedDoc(typeElem) &&
+                    !hasHiddenTag(typeElem)) ||
             (configuration.extern.isExternal(typeElem) &&
-                (isPublic(typeElem) || isProtected(typeElem)));
+                    (isPublic(typeElem) || isProtected(typeElem))));
     }
 
     /**
@@ -1173,7 +1178,7 @@ public class Utils {
             return isLinkable((TypeElement) elem); // defer to existing behavior
         }
 
-        if (isIncluded(elem)) {
+        if (isIncluded(elem) && !hasHiddenTag(elem)) {
             return true;
         }
 
@@ -1201,7 +1206,7 @@ public class Utils {
      *         or null if it is a primitive type.
      */
     public TypeElement asTypeElement(TypeMirror t) {
-        return new SimpleTypeVisitor9<TypeElement, Void>() {
+        return new SimpleTypeVisitor14<TypeElement, Void>() {
 
             @Override
             public TypeElement visitDeclared(DeclaredType t, Void p) {
@@ -1257,7 +1262,7 @@ public class Utils {
      * @return the type's dimension information as a string.
      */
     public String getDimension(TypeMirror t) {
-        return new SimpleTypeVisitor9<String, Void>() {
+        return new SimpleTypeVisitor14<String, Void>() {
             StringBuilder dimension = new StringBuilder();
             @Override
             public String visitArray(ArrayType t, Void p) {
@@ -1338,36 +1343,38 @@ public class Utils {
     }
 
     /**
-     * Given a TypeElement, return the name of its type (Class, Interface, etc.).
+     * Returns the name of the kind of a type element (Class, Interface, etc.).
      *
-     * @param te the TypeElement to check.
-     * @param lowerCaseOnly true if you want the name returned in lower case.
-     *                      If false, the first letter of the name is capitalized.
-     * @return
+     * @param te the type element
+     * @param lowerCaseOnly true if you want the name returned in lower case;
+     *                      if false, the first letter of the name is capitalized
+     * @return the name
      */
-    public String getTypeElementName(TypeElement te, boolean lowerCaseOnly) {
-        String typeName = "";
-        if (isInterface(te)) {
-            typeName = "doclet.Interface";
-        } else if (isException(te)) {
-            typeName = "doclet.Exception";
-        } else if (isError(te)) {
-            typeName = "doclet.Error";
-        } else if (isAnnotationType(te)) {
-            typeName = "doclet.AnnotationType";
-        } else if (isEnum(te)) {
-            typeName = "doclet.Enum";
-        } else if (isOrdinaryClass(te)) {
-            typeName = "doclet.Class";
-        }
-        typeName = lowerCaseOnly ? toLowerCase(typeName) : typeName;
-        return typeNameMap.computeIfAbsent(typeName, resources::getText);
+    public String getTypeElementKindName(TypeElement te, boolean lowerCaseOnly) {
+        String kindName = switch (te.getKind()) {
+            case ANNOTATION_TYPE ->
+                    "doclet.AnnotationType";
+            case ENUM ->
+                    "doclet.Enum";
+            case INTERFACE ->
+                    "doclet.Interface";
+            case RECORD ->
+                    "doclet.RecordClass";
+            case CLASS ->
+                    isException(te) ? "doclet.Exception"
+                    : isError(te) ? "doclet.Error"
+                    : "doclet.Class";
+            default ->
+                    throw new IllegalArgumentException(te.getKind().toString());
+        };
+        kindName = lowerCaseOnly ? toLowerCase(kindName) : kindName;
+        return kindNameMap.computeIfAbsent(kindName, resources::getText);
     }
 
-    private final Map<String, String> typeNameMap = new HashMap<>();
+    private final Map<String, String> kindNameMap = new HashMap<>();
 
     public String getTypeName(TypeMirror t, boolean fullyQualified) {
-        return new SimpleTypeVisitor9<String, Void>() {
+        return new SimpleTypeVisitor14<String, Void>() {
 
             @Override
             public String visitArray(ArrayType t, Void p) {
@@ -1541,16 +1548,17 @@ public class Utils {
     }
 
     /**
-     * Returns true if the element is included, contains &#64;hidden tag,
+     * Returns true if the element is included or selected, contains &#64;hidden tag,
      * or if javafx flag is present and element contains &#64;treatAsPrivate
      * tag.
      * @param e the queried element
      * @return true if it exists, false otherwise
      */
     public boolean hasHiddenTag(Element e) {
-        // prevent needless tests on elements which are not included
+        // Non-included elements may still be visible via "transclusion" from undocumented enclosures,
+        // but we don't want to run doclint on them, possibly causing warnings or errors.
         if (!isIncluded(e)) {
-            return false;
+            return hasBlockTagUnchecked(e, HIDDEN);
         }
         if (options.javafx() &&
                 hasBlockTag(e, DocTree.Kind.UNKNOWN_BLOCK_TAG, "treatAsPrivate")) {
@@ -1591,18 +1599,18 @@ public class Utils {
         SortedSet<TypeElement> filteredOutClasses =
                 new TreeSet<>(comparators.makeGeneralPurposeComparator());
         if (!javafx) {
-            for (Element te : classlist) {
+            for (TypeElement te : classlist) {
                 if (!hasHiddenTag(te)) {
-                    filteredOutClasses.add((TypeElement)te);
+                    filteredOutClasses.add(te);
                 }
             }
             return filteredOutClasses;
         }
-        for (Element e : classlist) {
+        for (TypeElement e : classlist) {
             if (isPrivate(e) || isPackagePrivate(e) || hasHiddenTag(e)) {
                 continue;
             }
-            filteredOutClasses.add((TypeElement)e);
+            filteredOutClasses.add(e);
         }
         return filteredOutClasses;
     }
@@ -1730,11 +1738,11 @@ public class Utils {
 
         private Collator createCollator(Locale locale) {
             Collator baseCollator = Collator.getInstance(locale);
-            if (baseCollator instanceof RuleBasedCollator) {
+            if (baseCollator instanceof RuleBasedCollator rbc) {
                 // Extend collator to sort signatures with additional args and var-args in a well-defined order:
                 // () < (int) < (int, int) < (int...)
                 try {
-                    return new RuleBasedCollator(((RuleBasedCollator) baseCollator).getRules()
+                    return new RuleBasedCollator(rbc.getRules()
                             + "& ')' < ',' < '.','['");
                 } catch (ParseException e) {
                     throw new RuntimeException(e);
@@ -1752,7 +1760,7 @@ public class Utils {
      * @return the fully qualified name of Reference type or the primitive name
      */
     public String getQualifiedTypeName(TypeMirror t) {
-        return new SimpleTypeVisitor9<String, Void>() {
+        return new SimpleTypeVisitor14<String, Void>() {
             @Override
             public String visitDeclared(DeclaredType t, Void p) {
                 return getFullyQualifiedName(t.asElement());
@@ -1782,7 +1790,7 @@ public class Utils {
 
     /**
      * A generic utility which returns the fully qualified names of an entity,
-     * if the entity is not qualifiable then its enclosing entity, it is upto
+     * if the entity is not qualifiable then its enclosing entity, it is up to
      * the caller to add the elements name as required.
      * @param e the element to get FQN for.
      * @return the name
@@ -1791,7 +1799,6 @@ public class Utils {
         return getFullyQualifiedName(e, true);
     }
 
-    @SuppressWarnings("preview")
     public String getFullyQualifiedName(Element e, final boolean outer) {
         return new SimpleElementVisitor14<String, Void>() {
             @Override
@@ -1817,78 +1824,104 @@ public class Utils {
     }
 
 
+    /**
+     * Returns the recursively enclosed documented type elements in a package
+     *
+     * @param pkg the package
+     * @return the elements
+     */
     public Iterable<TypeElement> getEnclosedTypeElements(PackageElement pkg) {
-        List<TypeElement> out = getInterfaces(pkg);
-        out.addAll(getClasses(pkg));
-        out.addAll(getEnums(pkg));
-        out.addAll(getAnnotationTypes(pkg));
-        out.addAll(getRecords(pkg));
-        return out;
+        return getItems(pkg, false, this::isTypeElement, TypeElement.class);
     }
 
     // Element related methods
-    public List<Element> getAnnotationMembers(TypeElement aClass) {
-        List<Element> members = getAnnotationFields(aClass);
-        members.addAll(getAnnotationMethods(aClass));
-        return members;
+
+    /**
+     * Returns the fields and methods declared in an annotation interface.
+     *
+     * @param te the annotation interface
+     * @return the fields and methods
+     */
+    public List<Element> getAnnotationMembers(TypeElement te) {
+        return getItems(te, false, e_ ->
+                        switch (e_.getKind()) {
+                            case FIELD, METHOD -> shouldDocument(e_);
+                            default -> false;
+                        },
+                Element.class);
+
     }
 
-    public List<Element> getAnnotationFields(TypeElement aClass) {
-        return getItems0(aClass, true, FIELD);
+    /**
+     * Returns the documented annotation interfaces in a package.
+     *
+     * @param pkg the package
+     * @return the annotation interfaces
+     */
+    public List<TypeElement> getAnnotationTypes(PackageElement pkg) {
+        return getDocumentedItems(pkg, ANNOTATION_TYPE, TypeElement.class);
     }
 
-    List<Element> getAnnotationFieldsUnfiltered(TypeElement aClass) {
-        return getItems0(aClass, true, FIELD);
+    /**
+     * Returns the documented record classes in a package.
+     *
+     * @param pkg the package
+     * @return the record classes
+     */
+    public List<TypeElement> getRecords(PackageElement pkg) {
+        return getDocumentedItems(pkg, RECORD, TypeElement.class);
     }
 
-    public List<Element> getAnnotationMethods(TypeElement aClass) {
-        return getItems0(aClass, true, METHOD);
+    /**
+     * Returns the documented fields in a type element.
+     *
+     * @param te the element
+     * @return the fields
+     */
+    public List<VariableElement> getFields(TypeElement te) {
+        return getDocumentedItems(te, FIELD, VariableElement.class);
     }
 
-    public List<TypeElement> getAnnotationTypes(Element e) {
-        return convertToTypeElement(getItems(e, true, ANNOTATION_TYPE));
+    /**
+     * Returns the fields in a type element.
+     *
+     * @param te the element
+     * @return the fields
+     */
+    public List<VariableElement> getFieldsUnfiltered(TypeElement te) {
+        return getAllItems(te, FIELD, VariableElement.class);
     }
 
-    public List<TypeElement> getAnnotationTypesUnfiltered(Element e) {
-        return convertToTypeElement(getItems(e, false, ANNOTATION_TYPE));
-    }
-
-    @SuppressWarnings("preview")
-    public List<TypeElement> getRecords(Element e) {
-        return convertToTypeElement(getItems(e, true, RECORD));
-    }
-
-    @SuppressWarnings("preview")
-    public List<TypeElement> getRecordsUnfiltered(Element e) {
-        return convertToTypeElement(getItems(e, false, RECORD));
-    }
-
-    public List<VariableElement> getFields(Element e) {
-        return convertToVariableElement(getItems(e, true, FIELD));
-    }
-
-    public List<VariableElement> getFieldsUnfiltered(Element e) {
-        return convertToVariableElement(getItems(e, false, FIELD));
-    }
-
+    /**
+     * Returns the documented classes in an element,
+     * such as a package element or type element.
+     *
+     * @param e the element
+     * @return the classes
+     */
     public List<TypeElement> getClasses(Element e) {
-       return convertToTypeElement(getItems(e, true, CLASS));
+        return getDocumentedItems(e, CLASS, TypeElement.class);
     }
 
-    public List<TypeElement> getClassesUnfiltered(Element e) {
-       return convertToTypeElement(getItems(e, false, CLASS));
+    /**
+     * Returns the documented constructors in a type element.
+     *
+     * @param te the type element
+     * @return the constructors
+     */
+    public List<ExecutableElement> getConstructors(TypeElement te) {
+        return getDocumentedItems(te, CONSTRUCTOR, ExecutableElement.class);
     }
 
-    public List<ExecutableElement> getConstructors(Element e) {
-        return convertToExecutableElement(getItems(e, true, CONSTRUCTOR));
-    }
 
-    public List<ExecutableElement> getMethods(Element e) {
-        return convertToExecutableElement(getItems(e, true, METHOD));
-    }
-
-    List<ExecutableElement> getMethodsUnfiltered(Element e) {
-        return convertToExecutableElement(getItems(e, false, METHOD));
+    /**
+     * Returns the documented methods in a type element.
+     *
+     * @param te the type element
+     * @return the methods
+     */
+    public List<ExecutableElement> getMethods(TypeElement te) {
+        return getDocumentedItems(te, METHOD, ExecutableElement.class);
     }
 
     public int getOrdinalValue(VariableElement member) {
@@ -1969,117 +2002,63 @@ public class Utils {
         return lineMap.getLineNumber(pos);
     }
 
-    public List<ExecutableElement> convertToExecutableElement(List<Element> list) {
-        List<ExecutableElement> out = new ArrayList<>(list.size());
-        for (Element e : list) {
-            out.add((ExecutableElement)e);
-        }
-        return out;
+    /**
+     * Returns the documented interfaces in a package.
+     *
+     * @param pkg the package
+     * @return the interfaces
+     */
+    public List<TypeElement> getInterfaces(PackageElement pkg)  {
+        return getDocumentedItems(pkg, INTERFACE, TypeElement.class);
     }
 
-    public List<TypeElement> convertToTypeElement(List<Element> list) {
-        List<TypeElement> out = new ArrayList<>(list.size());
-        for (Element e : list) {
-            out.add((TypeElement)e);
-        }
-        return out;
+    /**
+     * Returns the documented enum constants in a type element.
+     *
+     * @param te the element
+     * @return the interfaces
+     */
+    public List<VariableElement> getEnumConstants(TypeElement te) {
+        return getDocumentedItems(te, ENUM_CONSTANT, VariableElement.class);
     }
 
-    public List<VariableElement> convertToVariableElement(List<Element> list) {
-        List<VariableElement> out = new ArrayList<>(list.size());
-        for (Element e : list) {
-            out.add((VariableElement) e);
-        }
-        return out;
+    /**
+     * Returns the documented enum classes in a package.
+     *
+     * @param pkg the package
+     * @return the interfaces
+     */
+    public List<TypeElement> getEnums(PackageElement pkg) {
+        return getDocumentedItems(pkg, ENUM, TypeElement.class);
     }
 
-    public List<TypeElement> getInterfaces(Element e)  {
-        return convertToTypeElement(getItems(e, true, INTERFACE));
-    }
-
-    public List<TypeElement> getInterfacesUnfiltered(Element e)  {
-        return convertToTypeElement(getItems(e, false, INTERFACE));
-    }
-
-    public List<Element> getEnumConstants(Element e) {
-        return getItems(e, true, ENUM_CONSTANT);
-    }
-
-    public List<TypeElement> getEnums(Element e) {
-        return convertToTypeElement(getItems(e, true, ENUM));
-    }
-
-    public List<TypeElement> getEnumsUnfiltered(Element e) {
-        return convertToTypeElement(getItems(e, false, ENUM));
-    }
-
-    public SortedSet<TypeElement> getAllClassesUnfiltered(Element e) {
-        List<TypeElement> clist = getClassesUnfiltered(e);
-        clist.addAll(getInterfacesUnfiltered(e));
-        clist.addAll(getAnnotationTypesUnfiltered(e));
-        clist.addAll(getRecordsUnfiltered(e));
-        SortedSet<TypeElement> oset = new TreeSet<>(comparators.makeGeneralPurposeComparator());
-        oset.addAll(clist);
-        return oset;
+    /**
+     * Returns all the classes in a package.
+     *
+     * @param pkg the package
+     * @return the interfaces
+     */
+    public SortedSet<TypeElement> getAllClassesUnfiltered(PackageElement pkg) {
+        SortedSet<TypeElement> set = new TreeSet<>(comparators.makeGeneralPurposeComparator());
+        set.addAll(getItems(pkg, true, this::isTypeElement, TypeElement.class));
+        return set;
     }
 
     private final HashMap<Element, SortedSet<TypeElement>> cachedClasses = new HashMap<>();
+
     /**
-     * Returns a list containing classes and interfaces,
-     * including annotation types.
-     * @param e Element
-     * @return List
+     * Returns a sorted set containing the documented classes and interfaces in a package.
+     *
+     * @param pkg the element
+     * @return the classes and interfaces
      */
-    public SortedSet<TypeElement> getAllClasses(Element e) {
-        SortedSet<TypeElement> oset = cachedClasses.get(e);
-        if (oset != null)
+    public SortedSet<TypeElement> getAllClasses(PackageElement pkg) {
+        return cachedClasses.computeIfAbsent(pkg, p_ -> {
+            List<TypeElement> clist = getItems(pkg, false, this::isTypeElement, TypeElement.class);
+            SortedSet<TypeElement>oset = new TreeSet<>(comparators.makeGeneralPurposeComparator());
+            oset.addAll(clist);
             return oset;
-        List<TypeElement> clist = getClasses(e);
-        clist.addAll(getInterfaces(e));
-        clist.addAll(getAnnotationTypes(e));
-        clist.addAll(getEnums(e));
-        clist.addAll(getRecords(e));
-        oset = new TreeSet<>(comparators.makeGeneralPurposeComparator());
-        oset.addAll(clist);
-        cachedClasses.put(e, oset);
-        return oset;
-    }
-
-    /*
-     * Get all the elements unfiltered and filter them finally based
-     * on its visibility, this works differently from the other getters.
-     */
-    private List<TypeElement> getInnerClasses(Element e, boolean filter) {
-        List<TypeElement> olist = new ArrayList<>();
-        for (TypeElement te : getClassesUnfiltered(e)) {
-            if (!filter || configuration.docEnv.isSelected(te)) {
-                olist.add(te);
-            }
-        }
-        for (TypeElement te : getInterfacesUnfiltered(e)) {
-            if (!filter || configuration.docEnv.isSelected(te)) {
-                olist.add(te);
-            }
-        }
-        for (TypeElement te : getAnnotationTypesUnfiltered(e)) {
-            if (!filter || configuration.docEnv.isSelected(te)) {
-                olist.add(te);
-            }
-        }
-        for (TypeElement te : getEnumsUnfiltered(e)) {
-            if (!filter || configuration.docEnv.isSelected(te)) {
-                olist.add(te);
-            }
-        }
-        return olist;
-    }
-
-    public List<TypeElement> getInnerClasses(Element e) {
-        return getInnerClasses(e, true);
-    }
-
-    public List<TypeElement> getInnerClassesUnfiltered(Element e) {
-        return getInnerClasses(e, false);
+        });
     }
 
     /**
@@ -2090,75 +2069,114 @@ public class Utils {
     public List<TypeElement> getOrdinaryClasses(Element e) {
         return getClasses(e).stream()
                 .filter(te -> (!isException(te) && !isError(te)))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<TypeElement> getErrors(Element e) {
         return getClasses(e)
                 .stream()
                 .filter(this::isError)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<TypeElement> getExceptions(Element e) {
         return getClasses(e)
                 .stream()
                 .filter(this::isException)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    @SuppressWarnings("preview")
-    List<Element> getItems(Element e, boolean filter, ElementKind select) {
-        List<Element> elements = new ArrayList<>();
-        return new SimpleElementVisitor14<List<Element>, Void>() {
-
-            @Override
-            public List<Element> visitPackage(PackageElement e, Void p) {
-                recursiveGetItems(elements, e, filter, select);
-                return elements;
-            }
-
-            @Override
-            protected List<Element> defaultAction(Element e0, Void p) {
-                return getItems0(e0, filter, select);
-            }
-
-        }.visit(e);
+    /**
+     * Returns a list of documented elements of a given type with a given kind.
+     * If the root of the search is a package, the search is recursive.
+     *
+     * @param e      the element, such as a package element or type element
+     * @param kind   the element kind
+     * @param clazz  the class of the filtered members
+     * @param <T>    the class of the filtered members
+     *
+     * @return the list of enclosed elements
+     */
+    private <T extends Element> List<T> getDocumentedItems(Element e, ElementKind kind, Class<T> clazz) {
+        return getItems(e, false, e_ -> e_.getKind() == kind && shouldDocument(e_), clazz);
     }
 
-    Set<ElementKind> nestedKinds = EnumSet.of(ANNOTATION_TYPE, CLASS, ENUM, INTERFACE);
-    void recursiveGetItems(Collection<Element> list, Element e, boolean filter, ElementKind... select) {
-        list.addAll(getItems0(e, filter, select));
-        List<Element> classes = getItems0(e, filter, nestedKinds);
-        for (Element c : classes) {
-            list.addAll(getItems0(c, filter, select));
-            if (isTypeElement(c)) {
-                recursiveGetItems(list, c, filter, select);
-            }
+    /**
+     * Returns a list of elements of a given type with a given kind.
+     * If the root of the search is a package, the search is recursive.
+     *
+     * @param e      the element, such as a package element or type element
+     * @param kind   the element kind
+     * @param clazz  the class of the filtered members
+     * @param <T>    the class of the filtered members
+     *
+     * @return the list of enclosed elements
+     */
+    private <T extends Element> List<T> getAllItems(Element e, ElementKind kind, Class<T> clazz) {
+        return getItems(e, true, e_ -> e_.getKind() == kind, clazz);
+    }
+
+    /**
+     * Returns a list of elements of a given type that match a predicate.
+     * If the root of the search is a package, the search is recursive through packages
+     * and classes.
+     *
+     * @param e      the element, such as a package element or type element
+     * @param all    whether to search through all packages and classes, or just documented ones
+     * @param select the predicate to select members
+     * @param clazz  the class of the filtered members
+     * @param <T>    the class of the filtered members
+     *
+     * @return the list of enclosed elements
+     */
+    private <T extends Element> List<T> getItems(Element e, boolean all, Predicate<Element> select, Class<T> clazz) {
+        if (e.getKind() == ElementKind.PACKAGE) {
+            List<T> elements = new ArrayList<>();
+            recursiveGetItems(elements, e, all, select, clazz);
+            return elements;
+        } else {
+            return getItems0(e, all, select, clazz);
         }
     }
 
-    private List<Element> getItems0(Element te, boolean filter, ElementKind... select) {
-        Set<ElementKind> kinds = EnumSet.copyOf(Arrays.asList(select));
-        return getItems0(te, filter, kinds);
-    }
-
-    private List<Element> getItems0(Element te, boolean filter, Set<ElementKind> kinds) {
-        List<Element> elements = new ArrayList<>();
-        for (Element e : te.getEnclosedElements()) {
-            if (kinds.contains(e.getKind())) {
-                if (!filter || shouldDocument(e)) {
-                    elements.add(e);
-                }
-            }
+    /**
+     * Searches for a list of recursively enclosed elements of a given class that match a predicate.
+     * The recursion is through nested types.
+     *
+     * @param e      the element, such as a package element or type element
+     * @param all    whether to search all packages and classes, or just documented ones
+     * @param filter the filter
+     * @param clazz  the class of the filtered members
+     * @param <T>    the class of the filtered members
+     */
+    private <T extends Element> void recursiveGetItems(Collection<T> list, Element e, boolean all, Predicate<Element> filter, Class<T> clazz) {
+        list.addAll(getItems0(e, all, filter, clazz));
+        List<TypeElement> classes = getItems0(e, all, this::isTypeElement, TypeElement.class);
+        for (TypeElement c : classes) {
+            recursiveGetItems(list, c, all, filter, clazz);
         }
-        return elements;
     }
 
-    @SuppressWarnings("preview")
+    /**
+     * Returns a list of immediately enclosed elements of a given class that match a predicate.
+     *
+     * @param e      the element, such as a package element or type element
+     * @param all    whether to search all packages and classes, or just documented ones
+     * @param select the predicate for the selected members
+     * @param clazz  the class of the filtered members
+     * @param <T>    the class of the filtered members
+     *
+     * @return the list of enclosed elements
+     */
+    private <T extends Element> List<T> getItems0(Element e, boolean all, Predicate<Element> select, Class<T> clazz) {
+        return e.getEnclosedElements().stream()
+                .filter(e_ -> select.test(e_) && (all || shouldDocument(e_)))
+                .map(clazz::cast)
+                .toList();
+    }
+
     private SimpleElementVisitor14<Boolean, Void> shouldDocumentVisitor = null;
 
-    @SuppressWarnings("preview")
     public boolean shouldDocument(Element e) {
         if (shouldDocumentVisitor == null) {
             shouldDocumentVisitor = new SimpleElementVisitor14<Boolean, Void>() {
@@ -2211,13 +2229,11 @@ public class Utils {
         return nameCache.computeIfAbsent(e, this::getSimpleName0);
     }
 
-    @SuppressWarnings("preview")
     private SimpleElementVisitor14<String, Void> snvisitor = null;
 
-    @SuppressWarnings("preview")
     private String getSimpleName0(Element e) {
         if (snvisitor == null) {
-            snvisitor = new SimpleElementVisitor14<String, Void>() {
+            snvisitor = new SimpleElementVisitor14<>() {
                 @Override
                 public String visitModule(ModuleElement e, Void p) {
                     return e.getQualifiedName().toString();  // temp fix for 8182736
@@ -2253,12 +2269,14 @@ public class Utils {
     }
 
     public TypeElement getEnclosingTypeElement(Element e) {
-        if (e.getKind() == ElementKind.PACKAGE)
+        if (isPackage(e) || isModule(e)) {
             return null;
+        }
         Element encl = e.getEnclosingElement();
-        ElementKind kind = encl.getKind();
-        if (kind == ElementKind.PACKAGE)
+        if (isPackage(encl)) {
             return null;
+        }
+        ElementKind kind = encl.getKind();
         while (!(kind.isClass() || kind.isInterface())) {
             encl = encl.getEnclosingElement();
             kind = encl.getKind();
@@ -2268,63 +2286,59 @@ public class Utils {
 
     private ConstantValueExpression cve = null;
 
-    public String constantValueExpresion(VariableElement ve) {
+    public String constantValueExpression(VariableElement ve) {
         if (cve == null)
             cve = new ConstantValueExpression();
-        return cve.constantValueExpression(configuration.workArounds, ve);
+        return cve.visit(ve.asType(), ve.getConstantValue());
     }
 
-    private static class ConstantValueExpression {
-        public String constantValueExpression(WorkArounds workArounds, VariableElement ve) {
-            return new TypeKindVisitor9<String, Object>() {
-                /* TODO: we need to fix this correctly.
-                 * we have a discrepancy here, note the use of getConstValue
-                 * vs. getConstantValue, at some point we need to use
-                 * getConstantValue.
-                 * In the legacy world byte and char primitives appear as Integer values,
-                 * thus a byte value of 127 will appear as 127, but in the new world,
-                 * a byte value appears as Byte thus 0x7f will be printed, similarly
-                 * chars will be  translated to \n, \r etc. however, in the new world,
-                 * they will be printed as decimal values. The new world is correct,
-                 * and we should fix this by using getConstantValue and the visitor to
-                 * address this in the future.
-                 */
-                @Override
-                public String visitPrimitiveAsBoolean(PrimitiveType t, Object val) {
-                    return (int)val == 0 ? "false" : "true";
-                }
-
-                @Override
-                public String visitPrimitiveAsDouble(PrimitiveType t, Object val) {
-                    return sourceForm(((Double)val), 'd');
-                }
-
-                @Override
-                public String visitPrimitiveAsFloat(PrimitiveType t, Object val) {
-                    return sourceForm(((Float)val).doubleValue(), 'f');
-                }
-
-                @Override
-                public String visitPrimitiveAsLong(PrimitiveType t, Object val) {
-                    return val + "L";
-                }
-
-                @Override
-                protected String defaultAction(TypeMirror e, Object val) {
-                    if (val == null)
-                        return null;
-                    else if (val instanceof Character)
-                        return sourceForm(((Character)val));
-                    else if (val instanceof Byte)
-                        return sourceForm(((Byte)val));
-                    else if (val instanceof String)
-                        return sourceForm((String)val);
-                    return val.toString(); // covers int, short
-                }
-            }.visit(ve.asType(), workArounds.getConstValue(ve));
+    // We could also use Elements.getConstantValueExpression, which provides
+    // similar functionality, but which also includes casts to provide valid
+    // compilable constants:  e.g. (byte) 0x7f
+    private static class ConstantValueExpression extends TypeKindVisitor9<String, Object> {
+        @Override
+        public String visitPrimitiveAsBoolean(PrimitiveType t, Object val) {
+            return ((boolean) val) ? "true" : "false";
         }
 
-        // where
+        @Override
+        public String visitPrimitiveAsByte(PrimitiveType t, Object val) {
+            return "0x" + Integer.toString(((Byte) val) & 0xff, 16);
+        }
+
+        @Override
+        public String visitPrimitiveAsChar(PrimitiveType t, Object val) {
+            StringBuilder buf = new StringBuilder(8);
+            buf.append('\'');
+            sourceChar((char) val, buf);
+            buf.append('\'');
+            return buf.toString();
+        }
+
+        @Override
+        public String visitPrimitiveAsDouble(PrimitiveType t, Object val) {
+            return sourceForm(((Double) val), 'd');
+        }
+
+        @Override
+        public String visitPrimitiveAsFloat(PrimitiveType t, Object val) {
+            return sourceForm(((Float) val).doubleValue(), 'f');
+        }
+
+        @Override
+        public String visitPrimitiveAsLong(PrimitiveType t, Object val) {
+            return val + "L";
+        }
+
+        @Override
+        protected String defaultAction(TypeMirror e, Object val) {
+            if (val == null)
+                return null;
+            else if (val instanceof String s)
+                return sourceForm(s);
+            return val.toString(); // covers int, short
+        }
+
         private String sourceForm(double v, char suffix) {
             if (Double.isNaN(v))
                 return "0" + suffix + "/0" + suffix;
@@ -2335,22 +2349,10 @@ public class Utils {
             return v + (suffix == 'f' || suffix == 'F' ? "" + suffix : "");
         }
 
-        private  String sourceForm(char c) {
-            StringBuilder buf = new StringBuilder(8);
-            buf.append('\'');
-            sourceChar(c, buf);
-            buf.append('\'');
-            return buf.toString();
-        }
-
-        private String sourceForm(byte c) {
-            return "0x" + Integer.toString(c & 0xff, 16);
-        }
-
         private String sourceForm(String s) {
             StringBuilder buf = new StringBuilder(s.length() + 5);
             buf.append('\"');
-            for (int i=0; i<s.length(); i++) {
+            for (int i = 0; i < s.length(); i++) {
                 char c = s.charAt(i);
                 sourceChar(c, buf);
             }
@@ -2360,31 +2362,33 @@ public class Utils {
 
         private void sourceChar(char c, StringBuilder buf) {
             switch (c) {
-            case '\b': buf.append("\\b"); return;
-            case '\t': buf.append("\\t"); return;
-            case '\n': buf.append("\\n"); return;
-            case '\f': buf.append("\\f"); return;
-            case '\r': buf.append("\\r"); return;
-            case '\"': buf.append("\\\""); return;
-            case '\'': buf.append("\\\'"); return;
-            case '\\': buf.append("\\\\"); return;
-            default:
-                if (isPrintableAscii(c)) {
-                    buf.append(c); return;
+                case '\b' -> buf.append("\\b");
+                case '\t' -> buf.append("\\t");
+                case '\n' -> buf.append("\\n");
+                case '\f' -> buf.append("\\f");
+                case '\r' -> buf.append("\\r");
+                case '\"' -> buf.append("\\\"");
+                case '\'' -> buf.append("\\\'");
+                case '\\' -> buf.append("\\\\");
+                default -> {
+                    if (isPrintableAscii(c)) {
+                        buf.append(c);
+                        return;
+                    }
+                    unicodeEscape(c, buf);
                 }
-                unicodeEscape(c, buf);
-                return;
             }
         }
 
         private void unicodeEscape(char c, StringBuilder buf) {
             final String chars = "0123456789abcdef";
             buf.append("\\u");
-            buf.append(chars.charAt(15 & (c>>12)));
-            buf.append(chars.charAt(15 & (c>>8)));
-            buf.append(chars.charAt(15 & (c>>4)));
-            buf.append(chars.charAt(15 & (c>>0)));
+            buf.append(chars.charAt(15 & (c >> 12)));
+            buf.append(chars.charAt(15 & (c >> 8)));
+            buf.append(chars.charAt(15 & (c >> 4)));
+            buf.append(chars.charAt(15 & (c >> 0)));
         }
+
         private boolean isPrintableAscii(char c) {
             return c >= ' ' && c <= '~';
         }
@@ -2398,12 +2402,10 @@ public class Utils {
         return configuration.docEnv.isIncluded(e);
     }
 
-    @SuppressWarnings("preview")
     private SimpleElementVisitor14<Boolean, Void> specifiedVisitor = null;
-    @SuppressWarnings("preview")
     public boolean isSpecified(Element e) {
         if (specifiedVisitor == null) {
-            specifiedVisitor = new SimpleElementVisitor14<Boolean, Void>() {
+            specifiedVisitor = new SimpleElementVisitor14<>() {
                 @Override
                 public Boolean visitModule(ModuleElement e, Void p) {
                     return configuration.getSpecifiedModuleElements().contains(e);
@@ -2430,13 +2432,15 @@ public class Utils {
 
     /**
      * Get the package name for a given package element. An unnamed package is returned as &lt;Unnamed&gt;
+     * Use {@link jdk.javadoc.internal.doclets.formats.html.HtmlDocletWriter#getLocalizedPackageName(PackageElement)}
+     * to get a localized string for the unnamed package instead.
      *
      * @param pkg
      * @return
      */
     public String getPackageName(PackageElement pkg) {
         if (pkg == null || pkg.isUnnamed()) {
-            return DocletConstants.DEFAULT_PACKAGE_NAME;
+            return DocletConstants.DEFAULT_ELEMENT_NAME;
         }
         return pkg.getQualifiedName().toString();
     }
@@ -2593,7 +2597,10 @@ public class Utils {
     }
 
     public List<? extends DocTree> getBlockTags(Element element) {
-        DocCommentTree dcTree = getDocCommentTree(element);
+        return getBlockTags(getDocCommentTree(element));
+    }
+
+    public List<? extends DocTree> getBlockTags(DocCommentTree dcTree) {
         return dcTree == null ? Collections.emptyList() : dcTree.getBlockTags();
     }
 
@@ -2601,11 +2608,23 @@ public class Utils {
         return getBlockTags(element).stream()
                 .filter(t -> t.getKind() != ERRONEOUS)
                 .filter(filter)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public <T extends DocTree> List<? extends T> getBlockTags(Element element, Predicate<DocTree> filter, Class<T> tClass) {
+        return getBlockTags(element).stream()
+                .filter(t -> t.getKind() != ERRONEOUS)
+                .filter(filter)
+                .map(tClass::cast)
+                .toList();
     }
 
     public List<? extends DocTree> getBlockTags(Element element, DocTree.Kind kind) {
         return getBlockTags(element, t -> t.getKind() == kind);
+    }
+
+    public <T extends DocTree> List<? extends T> getBlockTags(Element element, DocTree.Kind kind, Class<T> tClass) {
+        return getBlockTags(element, t -> t.getKind() == kind, tClass);
     }
 
     public List<? extends DocTree> getBlockTags(Element element, DocTree.Kind kind, DocTree.Kind altKind) {
@@ -2614,10 +2633,10 @@ public class Utils {
 
     public List<? extends DocTree> getBlockTags(Element element, Taglet taglet) {
         return getBlockTags(element, t -> {
-            if (taglet instanceof BaseTaglet) {
-                return ((BaseTaglet) taglet).accepts(t);
-            } else if (t instanceof UnknownBlockTagTree) {
-                return ((UnknownBlockTagTree) t).getTagName().equals(taglet.getName());
+            if (taglet instanceof BaseTaglet baseTaglet) {
+                return baseTaglet.accepts(t);
+            } else if (t instanceof BlockTagTree blockTagTree) {
+                return blockTagTree.getTagName().equals(taglet.getName());
             } else {
                 return false;
             }
@@ -2629,13 +2648,27 @@ public class Utils {
     }
 
     public boolean hasBlockTag(Element element, DocTree.Kind kind, final String tagName) {
-        CommentHelper ch = getCommentHelper(element);
-        String tname = tagName != null && tagName.startsWith("@")
-                ? tagName.substring(1)
-                : tagName;
-        for (DocTree dt : getBlockTags(element, kind)) {
-            if (dt.getKind() == kind) {
-                if (tname == null || ch.getTagName(dt).equals(tname)) {
+        if (hasDocCommentTree(element)) {
+            CommentHelper ch = getCommentHelper(element);
+            for (DocTree dt : getBlockTags(ch.dcTree)) {
+                if (dt.getKind() == kind && (tagName == null || ch.getTagName(dt).equals(tagName))) {
+                    return true;
+                }
+            }
+        }
+        return false;
+    }
+
+    /*
+     * Tests whether an element's doc comment contains a block tag without caching it or
+     * running doclint on it. This is done by using getDocCommentInfo(Element) to retrieve
+     * the doc comment info.
+     */
+    boolean hasBlockTagUnchecked(Element element, DocTree.Kind kind) {
+        DocCommentInfo dcInfo = getDocCommentInfo(element);
+        if (dcInfo != null && dcInfo.dcTree != null) {
+            for (DocTree dt : getBlockTags(dcInfo.dcTree)) {
+                if (dt.getKind() == kind) {
                     return true;
                 }
             }
@@ -2673,39 +2706,28 @@ public class Utils {
      * The entries may come from the AST and DocCommentParser, or may be autromatically
      * generated comments for mandated elements and JavaFX properties.
      *
-     * @see CommentUtils.dcInfoMap
+     * @see CommentUtils#dcInfoMap
      */
     private final Map<Element, DocCommentInfo> dcTreeCache = new LinkedHashMap<>();
 
     /**
+     * Checks whether an element has an associated doc comment.
+     * @param element the element
+     * @return {@code true} if the element has a comment, and false otherwise
+     */
+    public boolean hasDocCommentTree(Element element) {
+        DocCommentInfo info = getDocCommentInfo(element);
+        return info != null && info.dcTree != null;
+    }
+
+    /**
      * Retrieves the doc comments for a given element.
-     * @param element
+     * @param element the element
      * @return DocCommentTree for the Element
      */
     public DocCommentTree getDocCommentTree0(Element element) {
 
-        DocCommentInfo info = null;
-
-        ElementKind kind = element.getKind();
-        if (kind == ElementKind.PACKAGE || kind == ElementKind.OTHER) {
-            info = dcTreeCache.get(element); // local cache
-            if (info == null && kind == ElementKind.PACKAGE) {
-                // package-info.java
-                info = getDocCommentInfo(element);
-            }
-            if (info == null) {
-                // package.html or overview.html
-                info = configuration.cmtUtils.getHtmlCommentInfo(element); // html source
-            }
-        } else {
-            info = configuration.cmtUtils.getSyntheticCommentInfo(element);
-            if (info == null) {
-                info = dcTreeCache.get(element); // local cache
-            }
-            if (info == null) {
-                info = getDocCommentInfo(element); // get the real mccoy
-            }
-        }
+        DocCommentInfo info = getDocCommentInfo(element);
 
         DocCommentTree docCommentTree = info == null ? null : info.dcTree;
         if (!dcTreeCache.containsKey(element)) {
@@ -2722,7 +2744,7 @@ public class Utils {
                     }
                 }
                 // run doclint even if docCommentTree is null, to trigger checks for missing comments
-                configuration.workArounds.runDocLint(path);
+                configuration.runDocLint(path);
             }
             dcTreeCache.put(element, info);
         }
@@ -2730,8 +2752,35 @@ public class Utils {
     }
 
     private DocCommentInfo getDocCommentInfo(Element element) {
+        DocCommentInfo info = null;
+
+        ElementKind kind = element.getKind();
+        if (kind == ElementKind.PACKAGE || kind == ElementKind.OTHER) {
+            info = dcTreeCache.get(element); // local cache
+            if (info == null && kind == ElementKind.PACKAGE) {
+                // package-info.java
+                info = getDocCommentInfo0(element);
+            }
+            if (info == null) {
+                // package.html or overview.html
+                info = configuration.cmtUtils.getHtmlCommentInfo(element); // html source
+            }
+        } else {
+            info = configuration.cmtUtils.getSyntheticCommentInfo(element);
+            if (info == null) {
+                info = dcTreeCache.get(element); // local cache
+            }
+            if (info == null) {
+                info = getDocCommentInfo0(element); // get the real mccoy
+            }
+        }
+
+        return info;
+    }
+
+    private DocCommentInfo getDocCommentInfo0(Element element) {
         // prevent nasty things downstream with overview element
-        if (element.getKind() != ElementKind.OTHER) {
+        if (!isOverviewElement(element)) {
             TreePath path = getTreePath(element);
             if (path != null) {
                 DocCommentTree docCommentTree = docTrees.getDocCommentTree(path);
@@ -2793,28 +2842,30 @@ public class Utils {
                 : docCommentTree.getFullBody();
     }
 
-    public List<? extends DocTree> getDeprecatedTrees(Element element) {
-        return getBlockTags(element, DEPRECATED);
+    public List<? extends DeprecatedTree> getDeprecatedTrees(Element element) {
+        return getBlockTags(element, DEPRECATED, DeprecatedTree.class);
     }
 
-    public List<? extends DocTree> getProvidesTrees(Element element) {
-        return getBlockTags(element, PROVIDES);
+    public List<? extends ProvidesTree> getProvidesTrees(Element element) {
+        return getBlockTags(element, PROVIDES, ProvidesTree.class);
     }
 
-    public List<? extends DocTree> getSeeTrees(Element element) {
-        return getBlockTags(element, SEE);
+    public List<? extends SeeTree> getSeeTrees(Element element) {
+        return getBlockTags(element, SEE, SeeTree.class);
     }
 
-    public List<? extends DocTree> getSerialTrees(Element element) {
-        return getBlockTags(element, SERIAL);
+    public List<? extends SerialTree> getSerialTrees(Element element) {
+        return getBlockTags(element, SERIAL, SerialTree.class);
     }
 
-    public List<? extends DocTree> getSerialFieldTrees(VariableElement field) {
-        return getBlockTags(field, DocTree.Kind.SERIAL_FIELD);
+    public List<? extends SerialFieldTree> getSerialFieldTrees(VariableElement field) {
+        return getBlockTags(field, DocTree.Kind.SERIAL_FIELD, SerialFieldTree.class);
     }
 
-    public List<? extends DocTree> getThrowsTrees(Element element) {
-        return getBlockTags(element, DocTree.Kind.EXCEPTION, DocTree.Kind.THROWS);
+    public List<? extends ThrowsTree> getThrowsTrees(Element element) {
+        return getBlockTags(element,
+                t -> switch (t.getKind()) { case EXCEPTION, THROWS -> true; default -> false; },
+                ThrowsTree.class);
     }
 
     public List<? extends ParamTree> getTypeParamTrees(Element element) {
@@ -2826,22 +2877,17 @@ public class Utils {
     }
 
     private  List<? extends ParamTree> getParamTrees(Element element, boolean isTypeParameters) {
-        List<ParamTree> out = new ArrayList<>();
-        for (DocTree dt : getBlockTags(element, PARAM)) {
-            ParamTree pt = (ParamTree) dt;
-            if (pt.isTypeParameter() == isTypeParameters) {
-                out.add(pt);
-            }
-        }
-        return out;
+        return getBlockTags(element,
+                t -> t.getKind() == PARAM && ((ParamTree) t).isTypeParameter() == isTypeParameters,
+                ParamTree.class);
     }
 
-    public  List<? extends DocTree> getReturnTrees(Element element) {
-        return new ArrayList<>(getBlockTags(element, RETURN));
+    public  List<? extends ReturnTree> getReturnTrees(Element element) {
+        return new ArrayList<>(getBlockTags(element, RETURN, ReturnTree.class));
     }
 
-    public List<? extends DocTree> getUsesTrees(Element element) {
-        return getBlockTags(element, USES);
+    public List<? extends UsesTree> getUsesTrees(Element element) {
+        return getBlockTags(element, USES, UsesTree.class);
     }
 
     public List<? extends DocTree> getFirstSentenceTrees(Element element) {
@@ -2937,4 +2983,237 @@ public class Utils {
             return first + ":" + second;
         }
     }
+
+    /**
+     * Return the set of preview language features used to declare the given element.
+     *
+     * @param e the Element to check.
+     * @return the set of preview language features used to declare the given element
+     */
+    public Set<DeclarationPreviewLanguageFeatures> previewLanguageFeaturesUsed(Element e) {
+        return new HashSet<>();
+    }
+
+    public enum DeclarationPreviewLanguageFeatures {
+        NONE(List.of(""));
+        public final List<String> features;
+
+        DeclarationPreviewLanguageFeatures(List<String> features) {
+            this.features = features;
+        }
+    }
+
+    public PreviewSummary declaredUsingPreviewAPIs(Element el) {
+        List<TypeElement> usedInDeclaration = new ArrayList<>();
+        usedInDeclaration.addAll(annotations2Classes(el));
+        switch (el.getKind()) {
+            case ANNOTATION_TYPE, CLASS, ENUM, INTERFACE, RECORD -> {
+                TypeElement te = (TypeElement) el;
+                for (TypeParameterElement tpe : te.getTypeParameters()) {
+                    usedInDeclaration.addAll(types2Classes(tpe.getBounds()));
+                }
+                usedInDeclaration.addAll(types2Classes(List.of(te.getSuperclass())));
+                usedInDeclaration.addAll(types2Classes(te.getInterfaces()));
+                usedInDeclaration.addAll(types2Classes(te.getPermittedSubclasses()));
+                usedInDeclaration.addAll(types2Classes(te.getRecordComponents().stream().map(Element::asType).toList())); //TODO: annotations on record components???
+            }
+            case CONSTRUCTOR, METHOD -> {
+                ExecutableElement ee = (ExecutableElement) el;
+                for (TypeParameterElement tpe : ee.getTypeParameters()) {
+                    usedInDeclaration.addAll(types2Classes(tpe.getBounds()));
+                }
+                usedInDeclaration.addAll(types2Classes(List.of(ee.getReturnType())));
+                usedInDeclaration.addAll(types2Classes(List.of(ee.getReceiverType())));
+                usedInDeclaration.addAll(types2Classes(ee.getThrownTypes()));
+                usedInDeclaration.addAll(types2Classes(ee.getParameters().stream().map(VariableElement::asType).toList()));
+                usedInDeclaration.addAll(annotationValue2Classes(ee.getDefaultValue()));
+            }
+            case FIELD, ENUM_CONSTANT, RECORD_COMPONENT -> {
+                VariableElement ve = (VariableElement) el;
+                usedInDeclaration.addAll(types2Classes(List.of(ve.asType())));
+            }
+            case MODULE, PACKAGE -> {
+            }
+            default -> throw new IllegalArgumentException("Unexpected: " + el.getKind());
+        }
+
+        Set<TypeElement> previewAPI = new HashSet<>();
+        Set<TypeElement> reflectivePreviewAPI = new HashSet<>();
+        Set<TypeElement> declaredUsingPreviewFeature = new HashSet<>();
+
+        for (TypeElement type : usedInDeclaration) {
+            if (!isIncluded(type) && !configuration.extern.isExternal(type)) {
+                continue;
+            }
+            if (isPreviewAPI(type)) {
+                if (isReflectivePreviewAPI(type)) {
+                    reflectivePreviewAPI.add(type);
+                } else {
+                    previewAPI.add(type);
+                }
+            }
+            if (!previewLanguageFeaturesUsed(type).isEmpty()) {
+                declaredUsingPreviewFeature.add(type);
+            }
+        }
+
+        return new PreviewSummary(previewAPI, reflectivePreviewAPI, declaredUsingPreviewFeature);
+    }
+
+    private Collection<TypeElement> types2Classes(List<? extends TypeMirror> types) {
+        List<TypeElement> result = new ArrayList<>();
+        List<TypeMirror> todo = new ArrayList<>(types);
+
+        while (!todo.isEmpty()) {
+            TypeMirror type = todo.remove(todo.size() - 1);
+
+            result.addAll(annotations2Classes(type));
+
+            if (type.getKind() == DECLARED) {
+                DeclaredType dt = (DeclaredType) type;
+                result.add((TypeElement) dt.asElement());
+                todo.addAll(dt.getTypeArguments());
+            }
+        }
+
+        return result;
+    }
+
+    private Collection<TypeElement> annotations2Classes(AnnotatedConstruct annotated) {
+        List<TypeElement> result = new ArrayList<>();
+
+        for (AnnotationMirror am : annotated.getAnnotationMirrors()) {
+            result.addAll(annotation2Classes(am));
+        }
+
+        return result;
+    }
+
+    private Collection<TypeElement> annotation2Classes(AnnotationMirror am) {
+        List<TypeElement> result = new ArrayList<>();
+
+        result.addAll(types2Classes(List.of(am.getAnnotationType())));
+        am.getElementValues()
+          .values()
+          .stream()
+          .flatMap(av -> annotationValue2Classes(av).stream())
+          .forEach(result::add);
+
+        return result;
+    }
+
+    private Collection<TypeElement> annotationValue2Classes(AnnotationValue value) {
+        if (value == null) {
+            return List.of();
+        }
+
+        List<TypeElement> result = new ArrayList<>();
+
+        value.accept(new SimpleAnnotationValueVisitor14<>() {
+            @Override
+            public Object visitArray(List<? extends AnnotationValue> vals, Object p) {
+                vals.stream()
+                    .forEach(v -> v.accept(this, null));
+                return super.visitArray(vals, p);
+            }
+            @Override
+            public Object visitAnnotation(AnnotationMirror a, Object p) {
+                result.addAll(annotation2Classes(a));
+                return super.visitAnnotation(a, p);
+            }
+
+            @Override
+            public Object visitType(TypeMirror t, Object p) {
+                result.addAll(types2Classes(List.of(t)));
+                return super.visitType(t, p);
+            }
+
+        }, null);
+
+        return result;
+    }
+
+    public static final class PreviewSummary {
+        public final Set<TypeElement> previewAPI;
+        public final Set<TypeElement> reflectivePreviewAPI;
+        public final Set<TypeElement> declaredUsingPreviewFeature;
+
+        public PreviewSummary(Set<TypeElement> previewAPI, Set<TypeElement> reflectivePreviewAPI, Set<TypeElement> declaredUsingPreviewFeature) {
+            this.previewAPI = previewAPI;
+            this.reflectivePreviewAPI = reflectivePreviewAPI;
+            this.declaredUsingPreviewFeature = declaredUsingPreviewFeature;
+        }
+
+        @Override
+        public String toString() {
+            return "PreviewSummary{" + "previewAPI=" + previewAPI + ", reflectivePreviewAPI=" + reflectivePreviewAPI + ", declaredUsingPreviewFeature=" + declaredUsingPreviewFeature + '}';
+        }
+
+    }
+
+    /**
+     * Checks whether the given Element should be marked as a preview API.
+     *
+     * Note that if a type is marked as a preview, its members are not.
+     *
+     * @param el the element to check
+     * @return true if and only if the given element should be marked as a preview API
+     */
+    public boolean isPreviewAPI(Element el) {
+        boolean parentPreviewAPI = false;
+        Element enclosing = el.getEnclosingElement();
+        if (enclosing != null && (enclosing.getKind().isClass() || enclosing.getKind().isInterface())) {
+            parentPreviewAPI = configuration.workArounds.isPreviewAPI(enclosing);
+        }
+        boolean previewAPI = configuration.workArounds.isPreviewAPI(el);
+        return !parentPreviewAPI && previewAPI;
+    }
+
+    /**
+     * Checks whether the given Element should be marked as a reflective preview API.
+     *
+     * Note that if a type is marked as a preview, its members are not.
+     *
+     * @param el the element to check
+     * @return true if and only if the given element should be marked
+     *              as a reflective preview API
+     */
+    public boolean isReflectivePreviewAPI(Element el) {
+        return isPreviewAPI(el) && configuration.workArounds.isReflectivePreviewAPI(el);
+    }
+
+    /**
+     * Return all flags for the given Element.
+     *
+     * @param el the element to test
+     * @return the set of all the element's flags.
+     */
+    public Set<ElementFlag> elementFlags(Element el) {
+        Set<ElementFlag> flags = EnumSet.noneOf(ElementFlag.class);
+        PreviewSummary previewAPIs = declaredUsingPreviewAPIs(el);
+
+        if (isDeprecated(el)) {
+            flags.add(ElementFlag.DEPRECATED);
+        }
+
+        if (!previewLanguageFeaturesUsed(el).isEmpty() ||
+            configuration.workArounds.isPreviewAPI(el) ||
+            !previewAPIs.previewAPI.isEmpty() ||
+            !previewAPIs.reflectivePreviewAPI.isEmpty() ||
+            !previewAPIs.declaredUsingPreviewFeature.isEmpty())  {
+            flags.add(ElementFlag.PREVIEW);
+        }
+
+        return flags;
+    }
+
+    /**
+     * An element can have flags that place it into some sub-categories, like
+     * being a preview or a deprecated element.
+     */
+    public enum ElementFlag {
+        DEPRECATED,
+        PREVIEW
+    }
+
 }
