@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -60,7 +60,6 @@ import java.util.stream.Collectors;
 
 import jdk.internal.module.Checks;
 import jdk.internal.module.DefaultRoots;
-import jdk.internal.module.IllegalAccessMaps;
 import jdk.internal.module.Modules;
 import jdk.internal.module.ModuleHashes;
 import jdk.internal.module.ModuleInfo.Attributes;
@@ -78,7 +77,6 @@ import jdk.internal.org.objectweb.asm.Opcodes;
 import static jdk.internal.org.objectweb.asm.Opcodes.*;
 
 import jdk.tools.jlink.internal.ModuleSorter;
-import jdk.tools.jlink.plugin.Plugin;
 import jdk.tools.jlink.plugin.PluginException;
 import jdk.tools.jlink.plugin.ResourcePool;
 import jdk.tools.jlink.plugin.ResourcePoolBuilder;
@@ -97,10 +95,7 @@ import jdk.tools.jlink.plugin.ResourcePoolEntry;
  * @see jdk.internal.module.SystemModules
  */
 
-public final class SystemModulesPlugin implements Plugin {
-    private static final String NAME = "system-modules";
-    private static final String DESCRIPTION =
-            PluginsResourceBundle.getDescription(NAME);
+public final class SystemModulesPlugin extends AbstractPlugin {
     private static final String SYSTEM_MODULES_MAP_CLASS =
             "jdk/internal/module/SystemModulesMap";
     private static final String SYSTEM_MODULES_CLASS_PREFIX =
@@ -113,17 +108,8 @@ public final class SystemModulesPlugin implements Plugin {
     private boolean enabled;
 
     public SystemModulesPlugin() {
+        super("system-modules");
         this.enabled = true;
-    }
-
-    @Override
-    public String getName() {
-        return NAME;
-    }
-
-    @Override
-    public String getDescription() {
-        return DESCRIPTION;
     }
 
     @Override
@@ -138,22 +124,17 @@ public final class SystemModulesPlugin implements Plugin {
     }
 
     @Override
-    public String getArgumentsDescription() {
-        return PluginsResourceBundle.getArgument(NAME);
-    }
-
-    @Override
     public void configure(Map<String, String> config) {
-        String arg = config.get(NAME);
+        String arg = config.get(getName());
         if (arg != null) {
-            throw new IllegalArgumentException(NAME + ": " + arg);
+            throw new IllegalArgumentException(getName() + ": " + arg);
         }
     }
 
     @Override
     public ResourcePool transform(ResourcePool in, ResourcePoolBuilder out) {
         if (!enabled) {
-            throw new PluginException(NAME + " was set");
+            throw new PluginException(getName() + " was set");
         }
 
         // validate, transform (if needed), and add the module-info.class files
@@ -309,7 +290,7 @@ public final class SystemModulesPlugin implements Plugin {
                 .collect(Collectors.toSet());
         return moduleInfos.stream()
                 .filter(mi -> names.contains(mi.moduleName()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -640,9 +621,6 @@ public final class SystemModulesPlugin implements Plugin {
             // generate moduleReads
             genModuleReads(cw, cf);
 
-            // generate concealedPackagesToOpen and exportedPackagesToOpen
-            genXXXPackagesToOpenMethods(cw);
-
             return cw;
         }
 
@@ -871,16 +849,6 @@ public final class SystemModulesPlugin implements Plugin {
                                     .map(ResolvedModule::name)
                                     .collect(Collectors.toSet())));
             generate(cw, "moduleReads", map, true);
-        }
-
-        /**
-         * Generate concealedPackagesToOpen and exportedPackagesToOpen methods.
-         */
-        private void genXXXPackagesToOpenMethods(ClassWriter cw) {
-            ModuleFinder finder = finderOf(moduleInfos);
-            IllegalAccessMaps maps = IllegalAccessMaps.generate(finder);
-            generate(cw, "concealedPackagesToOpen", maps.concealedPackagesToOpen(), false);
-            generate(cw, "exportedPackagesToOpen", maps.exportedPackagesToOpen(), false);
         }
 
         /**
