@@ -24,15 +24,11 @@
 
 /*
  * @test
- * @run testng/othervm -Dforeign.restricted=permit TestSharedAccess
+ * @run testng/othervm --enable-native-access=ALL-UNNAMED TestSharedAccess
  */
 
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.MemoryLayout;
-import jdk.incubator.foreign.MemoryLayouts;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.SequenceLayout;
-import org.testng.annotations.Test;
+import jdk.incubator.foreign.*;
+import org.testng.annotations.*;
 
 import java.lang.invoke.VarHandle;
 import java.nio.ByteBuffer;
@@ -41,55 +37,25 @@ import java.util.List;
 import java.util.Spliterator;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CountDownLatch;
-import java.util.concurrent.ExecutionException;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.concurrent.atomic.AtomicReference;
-import java.util.function.Consumer;
 
-import static org.testng.Assert.assertEquals;
-import static org.testng.Assert.assertTrue;
-import static org.testng.Assert.fail;
+import static org.testng.Assert.*;
 
 public class TestSharedAccess {
 
     static final VarHandle intHandle = MemoryLayouts.JAVA_INT.varHandle(int.class);
 
     @Test
-    public void testConfined() throws Throwable {
-        Thread owner = Thread.currentThread();
-        MemorySegment s = MemorySegment.allocateNative(4);
-        AtomicReference<MemorySegment> confined = new AtomicReference<>(s);
-        setInt(s.baseAddress(), 42);
-        assertEquals(getInt(s.baseAddress()), 42);
-        List<Thread> threads = new ArrayList<>();
-        for (int i = 0 ; i < 1000 ; i++) {
-            threads.add(new Thread(() -> {
-                assertEquals(getInt(confined.get().baseAddress()), 42);
-                confined.set(confined.get().withOwnerThread(owner));
-            }));
-        }
-        threads.forEach(t -> {
-            confined.set(confined.get().withOwnerThread(t));
-            t.start();
-            try {
-                t.join();
-            } catch (Throwable e) {
-                throw new IllegalStateException(e);
-            }
-        });
-        confined.get().close();
-    }
-
-    @Test
     public void testShared() throws Throwable {
-        SequenceLayout layout = MemoryLayout.ofSequence(1024, MemoryLayouts.JAVA_INT);
-        try (MemorySegment s = MemorySegment.allocateNative(layout)) {
+        SequenceLayout layout = MemoryLayout.sequenceLayout(1024, MemoryLayouts.JAVA_INT);
+        try (ResourceScope scope = ResourceScope.newSharedScope()) {
+            MemorySegment s = MemorySegment.allocateNative(layout, scope);
             for (int i = 0 ; i < layout.elementCount().getAsLong() ; i++) {
-                setInt(s.baseAddress().addOffset(i * 4), 42);
+                setInt(s.asSlice(i * 4), 42);
             }
             List<Thread> threads = new ArrayList<>();
             List<Spliterator<MemorySegment>> spliterators = new ArrayList<>();
-            spliterators.add(MemorySegment.spliterator(s, layout));
+            spliterators.add(s.spliterator(layout.elementLayout()));
             while (true) {
                 boolean progress = false;
                 List<Spliterator<MemorySegment>> newSpliterators = new ArrayList<>();
@@ -108,7 +74,7 @@ public class TestSharedAccess {
             for (Spliterator<MemorySegment> spliterator : spliterators) {
                 threads.add(new Thread(() -> {
                     spliterator.tryAdvance(local -> {
-                        assertEquals(getInt(local.baseAddress()), 42);
+                        assertEquals(getInt(local), 42);
                         accessCount.incrementAndGet();
                     });
                 }));
@@ -127,15 +93,15 @@ public class TestSharedAccess {
 
     @Test
     public void testSharedUnsafe() throws Throwable {
-        try (MemorySegment s = MemorySegment.allocateNative(4)) {
-            setInt(s.baseAddress(), 42);
-            assertEquals(getInt(s.baseAddress()), 42);
+        try (ResourceScope scope = ResourceScope.newSharedScope()) {
+            MemorySegment s = MemorySegment.allocateNative(4, 1, scope);
+            setInt(s, 42);
+            assertEquals(getInt(s), 42);
             List<Thread> threads = new ArrayList<>();
-            MemorySegment sharedSegment = MemorySegment.ofNativeRestricted(
-                    s.baseAddress(), s.byteSize(), null, null, null);
+            MemorySegment sharedSegment = s.address().asSegment(s.byteSize(), scope);
             for (int i = 0 ; i < 1000 ; i++) {
                 threads.add(new Thread(() -> {
-                    assertEquals(getInt(sharedSegment.baseAddress()), 42);
+                    assertEquals(getInt(sharedSegment), 42);
                 }));
             }
             threads.forEach(Thread::start);
@@ -149,73 +115,13 @@ public class TestSharedAccess {
         }
     }
 
-    @Test(expectedExceptions=IllegalStateException.class)
-    public void testBadCloseWithPendingAcquire() {
-        withAcquired(MemorySegment::close);
-    }
-
-    @Test(expectedExceptions=IllegalStateException.class)
-    public void testBadCloseWithPendingAcquireBuffer() {
-        withAcquired(segment -> {
-            segment = MemorySegment.ofByteBuffer(segment.asByteBuffer()); // original segment is lost
-            segment.close(); // this should still fail
-        });
-    }
-
-    @Test(expectedExceptions=IllegalStateException.class)
-    public void testBadHandoffWithPendingAcquire() {
-        withAcquired(segment -> segment.withOwnerThread(new Thread()));
-    }
-
-    @Test(expectedExceptions=IllegalStateException.class)
-    public void testBadHandoffWithPendingAcquireBuffer() {
-        withAcquired(segment -> {
-            segment = MemorySegment.ofByteBuffer(segment.asByteBuffer()); // original segment is lost
-            segment.withOwnerThread(new Thread()); // this should still fail
-        });
-    }
-
-    @Test(expectedExceptions=IllegalArgumentException.class)
-    public void testBadHandoffSameThread() {
-        MemorySegment.ofArray(new int[4]).withOwnerThread(Thread.currentThread());
-    }
-
-    @Test(expectedExceptions=NullPointerException.class)
-    public void testBadHandoffNullThread() {
-        MemorySegment.ofArray(new int[4]).withOwnerThread(null);
-    }
-
-    private void withAcquired(Consumer<MemorySegment> acquiredAction) {
-        CountDownLatch holder = new CountDownLatch(1);
-        MemorySegment segment = MemorySegment.allocateNative(16);
-        Spliterator<MemorySegment> spliterator = MemorySegment.spliterator(segment,
-                MemoryLayout.ofSequence(16, MemoryLayouts.JAVA_BYTE));
-        CountDownLatch acquired = new CountDownLatch(1);
-        Runnable r = () -> spliterator.tryAdvance(s -> {
-            try {
-                acquired.countDown();
-                holder.await();
-            } catch (InterruptedException ex) {
-                throw new AssertionError(ex);
-            }
-        });
-        new Thread(r).start();
-        try {
-            acquired.await();
-            acquiredAction.accept(segment);
-        } catch (InterruptedException ex) {
-            throw new AssertionError(ex);
-        } finally {
-            holder.countDown();
-        }
-    }
-
     @Test
     public void testOutsideConfinementThread() throws Throwable {
         CountDownLatch a = new CountDownLatch(1);
         CountDownLatch b = new CountDownLatch(1);
         CompletableFuture<?> r;
-        try (MemorySegment s1 = MemorySegment.allocateNative(MemoryLayout.ofSequence(2, MemoryLayouts.JAVA_INT))) {
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            MemorySegment s1 = MemorySegment.allocateNative(MemoryLayout.sequenceLayout(2, MemoryLayouts.JAVA_INT), scope);
             r = CompletableFuture.runAsync(() -> {
                 try {
                     ByteBuffer bb = s1.asByteBuffer();
@@ -228,8 +134,7 @@ public class TestSharedAccess {
                     } catch (InterruptedException e) {
                     }
 
-                    MemoryAddress base = s2.baseAddress();
-                    setInt(base.addOffset(4), -42);
+                    setInt(s2.asSlice(4), -42);
                     fail();
                 } catch (IllegalStateException ex) {
                     assertTrue(ex.getMessage().contains("owning thread"));
@@ -237,19 +142,18 @@ public class TestSharedAccess {
             });
 
             a.await();
-            MemoryAddress base = s1.baseAddress();
-            setInt(base.addOffset(4), 42);
+            setInt(s1.asSlice(4), 42);
         }
 
         b.countDown();
         r.get();
     }
 
-    static int getInt(MemoryAddress address) {
-        return (int)intHandle.getVolatile(address);
+    static int getInt(MemorySegment base) {
+        return (int)intHandle.getVolatile(base);
     }
 
-    static void setInt(MemoryAddress address, int value) {
-        intHandle.setVolatile(address, value);
+    static void setInt(MemorySegment base, int value) {
+        intHandle.setVolatile(base, value);
     }
 }
