@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,6 +23,7 @@
 
 import java.io.FilePermission;
 import java.io.IOException;
+import java.lang.reflect.ReflectPermission;
 import java.security.CodeSource;
 import java.security.Permission;
 import java.security.PermissionCollection;
@@ -35,12 +36,11 @@ import java.util.PropertyPermission;
 
 import org.testng.Assert;
 import org.testng.annotations.AfterClass;
-import org.testng.annotations.BeforeGroups;
 import org.testng.annotations.Test;
 
 /*
  * @test
- * @run testng/othervm PermissionTest
+ * @run testng/othervm -Djava.security.manager=allow PermissionTest
  * @summary Test Permissions to access Info
  */
 
@@ -118,45 +118,54 @@ public class PermissionTest {
         }
     }
 
-    @BeforeGroups (groups = {"NoManageProcessPermission"})
+    /**
+     * Setup a policy that would reject ProcessHandle requests without Permissions ManageProcess.
+     */
     public void noPermissionsSetup(){
         Policy.setPolicy(new TestPolicy());
         SecurityManager sm = new SecurityManager();
         System.setSecurityManager(sm);
     }
 
-    @Test(groups = { "NoManageProcessPermission" }, expectedExceptions = SecurityException.class)
+    @Test(expectedExceptions = SecurityException.class)
     public void noPermissionAllChildren() {
+        noPermissionsSetup();
         currentHndl.descendants();
     }
 
-    @Test(groups = { "NoManageProcessPermission" }, expectedExceptions = SecurityException.class)
+    @Test(expectedExceptions = SecurityException.class)
     public void noPermissionAllProcesses() {
+        noPermissionsSetup();
         ProcessHandle.allProcesses();
     }
 
-    @Test(groups = { "NoManageProcessPermission" }, expectedExceptions = SecurityException.class)
+    @Test(expectedExceptions = SecurityException.class)
     public void noPermissionChildren() {
+        noPermissionsSetup();
         currentHndl.children();
     }
 
-    @Test(groups = { "NoManageProcessPermission" }, expectedExceptions = SecurityException.class)
+    @Test(expectedExceptions = SecurityException.class)
     public void noPermissionCurrent() {
+        noPermissionsSetup();
         ProcessHandle.current();
     }
 
-    @Test(groups = { "NoManageProcessPermission" }, expectedExceptions = SecurityException.class)
+    @Test(expectedExceptions = SecurityException.class)
     public void noPermissionOf() {
+        noPermissionsSetup();
         ProcessHandle.of(0);
     }
 
-    @Test(groups = { "NoManageProcessPermission" }, expectedExceptions = SecurityException.class)
+    @Test(expectedExceptions = SecurityException.class)
     public void noPermissionParent() {
+        noPermissionsSetup();
         currentHndl.parent();
     }
 
-    @Test(groups = { "NoManageProcessPermission" }, expectedExceptions = SecurityException.class)
+    @Test(expectedExceptions = SecurityException.class)
     public void noPermissionProcessToHandle() throws IOException {
+        noPermissionsSetup();
         Process p = null;
         try {
             ProcessBuilder pb = new ProcessBuilder("sleep", "30");
@@ -197,14 +206,20 @@ class TestPolicy extends Policy {
         permissions.add(new RuntimePermission("getClassLoader"));
         permissions.add(new RuntimePermission("setSecurityManager"));
         permissions.add(new RuntimePermission("createSecurityManager"));
-        permissions.add(new PropertyPermission("testng.show.stack.frames",
-                "read"));
         permissions.add(new PropertyPermission("user.dir", "read"));
         permissions.add(new PropertyPermission("test.src", "read"));
         permissions.add(new PropertyPermission("file.separator", "read"));
         permissions.add(new PropertyPermission("line.separator", "read"));
         permissions.add(new PropertyPermission("fileStringBuffer", "read"));
         permissions.add(new PropertyPermission("dataproviderthreadcount", "read"));
+        permissions.add(new PropertyPermission("testng.show.stack.frames",
+                "read"));
+        permissions.add(new PropertyPermission("testng.thread.affinity", "read"));
+        permissions.add(new PropertyPermission("testng.memory.friendly", "read"));
+        permissions.add(new PropertyPermission("testng.mode.dryrun", "read"));
+        permissions.add(new PropertyPermission("testng.report.xml.name", "read"));
+        permissions.add(new PropertyPermission("testng.timezone", "read"));
+        permissions.add(new ReflectPermission("suppressAccessChecks"));
         permissions.add(new FilePermission("<<ALL FILES>>", "execute"));
     }
 
