@@ -22,14 +22,14 @@
  */
 
 /*
- * @test %W% %E%
- * @bug 6695485
+ * @test
+ * @bug 6695485 8242332
  * @summary Make sure initSign/initVerify() check RSA key lengths
  * @author Yu-Ching Valerie Peng
  * @library /test/lib ..
  * @modules jdk.crypto.cryptoki
  * @run main/othervm TestRSAKeyLength
- * @run main/othervm TestRSAKeyLength sm
+ * @run main/othervm -Djava.security.manager=allow TestRSAKeyLength sm
  */
 
 import java.security.InvalidKeyException;
@@ -50,9 +50,14 @@ public class TestRSAKeyLength extends PKCS11Test {
     @Override
     public void main(Provider p) throws Exception {
 
-        boolean isValidKeyLength[] = { true, true, true, false, false };
-        String algos[] = { "SHA1withRSA", "SHA224withRSA", "SHA256withRSA",
-                           "SHA384withRSA", "SHA512withRSA" };
+        boolean isValidKeyLength[] = {
+                true, true, true, false, false, true, true, false, false
+        };
+        String algos[] = {
+                "SHA1withRSA", "SHA224withRSA", "SHA256withRSA",
+                "SHA384withRSA", "SHA512withRSA", "SHA3-224withRSA",
+                "SHA3-256withRSA", "SHA3-384withRSA", "SHA3-512withRSA"
+        };
         KeyPairGenerator kpg = KeyPairGenerator.getInstance("RSA", p);
         kpg.initialize(512);
         KeyPair kp = kpg.generateKeyPair();
