@@ -31,7 +31,7 @@
  * @key randomness
  * @modules jdk.crypto.cryptoki
  * @run main/othervm TestECDSA
- * @run main/othervm TestECDSA sm policy
+ * @run main/othervm -Djava.security.manager=allow TestECDSA sm policy
  */
 
 import java.security.KeyFactory;
@@ -156,12 +156,14 @@ public class TestECDSA extends PKCS11Test {
             return;
         }
 
-        if (getNSSECC() != ECCState.Basic) {
+        if (getSupportedECParameterSpec("secp192r1", provider).isPresent()) {
             test(provider, pub192, priv192, sig192);
+        }
+        if (getSupportedECParameterSpec("sect163r1", provider).isPresent()) {
             test(provider, pub163, priv163, sig163);
+        }
+        if (getSupportedECParameterSpec("sect571r1", provider).isPresent()) {
             test(provider, pub571, priv571, sig571);
-        } else {
-            System.out.println("ECC Basic only, skipping 192, 163 and 571.");
         }
         test(provider, pub521, priv521, sig521);
 
